# PrimeLog

./: .gitignore  .gitignore.bak  README.md  loop.sh  primelog-manual.html
legacy/primelog-0.1.3/primelog-pkg/: pyproject.toml
legacy/primelog-0.2.0/primelog-pkg/: pyproject.toml
primelog-0.2.1/primelog-pkg/: pyproject.toml.bak
primelog-0.2.3/primelog-pkg/: README.md  pyproject.toml
primelog-0.2.3/primelog-pkg/primelog/: cli.py
primelog-0.2.4/primelog-pkg/: README.md  pyproject.toml
primelog-2.5/primelog-pkg/: MANIFEST.in  PrimeLog_Manual.docx  pyproject.toml
primelog-2.5/primelog-pkg/contrib/ascii_plots/: primelog-ascii  run_all.sh
primelog-2.5/primelog-pkg/contrib/ascii_plots/py_plots/: errors.py  fft.py  heatmap.py  timeseries.py
primelog-2.5/primelog-pkg/contrib/ascii_plots/wl_bridge/: heatmap.wl  timeseries.wl
primelog-2.5/primelog-pkg/contrib/primelog-wl-templates/: README.md  examples.wl  primelog_template.wl
primelog-2.5/primelog-pkg/demo/: test_full_chain.py  test_prime_encoding.py  test_scarecrow.py  test_schema_registry.py
primelog-2.5/primelog-pkg/primelog/: __init__.py  cli.py
primelog-2.5/primelog-pkg/primelog/core/: error_constants.py  error_log.py  registry.py
primelog-2.5/primelog-pkg/primelog/postoffice/: __init__.py  mailbag.py  node.py  postmare.py  test_postmare.py
primelog-2.5/primelog-pkg/primelog/tools/: aggregate.py  exporter.py
primelog-3.0/primelog-pkg/: MANIFEST.in  PrimeLog_Manual.docx
primelog-pkg/primelog/: components.yaml
primelog-pkg/primelog.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
(+83 files in other folders)
