[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "primelog"
version = "0.3.0"
description = "Decompose Anything. Understand Everything. — 基于素数唯一分解定理的通用组件日志与可观测性框架"
readme = "README.md"
license = { text = "MPL-2.0" }
authors = [
    { name = "RoseHammer" }
]
keywords = ["logging", "observability", "prime", "registry", "debug", "component"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Logging",
    "Topic :: System :: Monitoring",
]
requires-python = ">=3.9"
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
analysis = [
    "numpy>=1.21",
    "scipy>=1.7",
    "matplotlib>=3.5",
    "pandas>=1.3",
]

[project.scripts]
primelog = "primelog.cli:main"

[project.urls]
Homepage   = "https://github.com/TurinFohlen/PrimeLog"
Repository = "https://github.com/TurinFohlen/PrimeLog"

[tool.setuptools.packages.find]
where = ["."]
include = ["primelog*"]

[tool.setuptools.package-data]
"primelog" = ["py.typed"]
[project.entry-points."primelog.plugins"]
# 将来插件可以在此注册